# gtest-example

./: CMakeLists.txt  MyClass.cpp  MyClass.h  MyClassTest.cpp
